# persistent-dictionary

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/append-only-kv/: AppendOnlyKv.cpp  AppendOnlyKv.h  CMakeLists.txt  PersistentList.cpp  PersistentList.h  PersistentNode.h  PersistentPool.cpp  PersistentPool.h
src/dictionary/: CMakeLists.txt  Trie.cpp  Trie.h  TrieNode.h  TriePool.cpp  TriePool.h
test/append-only-kv/: AppendOnlyKvFixture.h  AppendOnlyKv_integration_test.cpp
test/dictionary/: DictionaryFixture.h  Dictionary_integration_test.cpp
